--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,3 +16,5 @@ Imports:
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
+URL: https://github.com/chriszheng2016/zstexplorer
+BugReports: https://github.com/chriszheng2016/zstexplorer/issues
