--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,12 +9,19 @@ Authors@R:
 Description: An interactive tool to explore data of China stock
     market.
 License: MIT + file LICENSE
-Imports: 
-    config,
-    golem,
-    shiny
-Encoding: UTF-8
-LazyData: true
-RoxygenNote: 6.1.1
 URL: https://github.com/chriszheng2016/zstexplorer
 BugReports: https://github.com/chriszheng2016/zstexplorer/issues
+Imports: 
+    attempt,
+    config,
+    DT,
+    glue,
+    golem,
+    htmltools,
+    shiny,
+    processx
+Encoding: UTF-8
+LazyData: true
+RoxygenNote: 7.1.1
+Suggests: 
+    testthat
