--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,10 +18,15 @@ Imports:
     glue,
     golem,
     htmltools,
+    pkgload,
+    processx,
     shiny,
-    processx
+    zstmodelr
+Suggests: 
+    mockery,
+    testthat,
+    withr
 Encoding: UTF-8
 LazyData: true
+Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-Suggests: 
-    testthat
