--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,3 +20,7 @@ importFrom(shiny,NS)
 importFrom(shiny,column)
 importFrom(shiny,shinyApp)
 importFrom(shiny,tagList)
+importFrom(stats,mad)
+importFrom(stats,median)
+importFrom(stats,sd)
+importFrom(utils,head)
