ENH: add fct_testdata to provide unified interface to testApp
** provide an unified interface of loading test data for test App

** Update test App for shiny modules

** Update related tests for shiny modules

[ticket: X]

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,22 +17,27 @@ Imports:
     assertive,
     attempt,
     config,
+    corrplot,
     DataExplorer,
     dplyr,
     DT,
+    fBasics,
     fs,
     ggplot2,
     glue,
     golem,
     here,
+    Hmisc,
     htmltools,
     magrittr,
     PerformanceAnalytics,
     pkgload,
     shiny,
     shinydashboard,
+    skimr,
     tidyr,
     tsibble,
+    visdat,
     zstmodelr
 Suggests: 
     covr,
