ENH: add mod_cs_cor_GGally
** source and tests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,12 +17,14 @@ Imports:
     assertive,
     attempt,
     config,
+    correlationfunnel,
     corrplot,
     DataExplorer,
     dplyr,
     DT,
     fBasics,
     fs,
+    GGally,
     ggplot2,
     glue,
     golem,
