TST: fix errors found by check()

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,17 +32,22 @@ Imports:
     Hmisc,
     htmltools,
     magrittr,
+    mice,
     naniar,
     PerformanceAnalytics,
     pkgload,
+    plotly,
+    purrr,
+    rlang,
     shiny,
     shinydashboard,
     skimr,
+    tibble,
     tidyr,
     tsibble,
+    usethis,
     visdat,
-    zstmodelr,
-    plotly
+    zstmodelr
 Suggests: 
     covr,
     mockery,
