--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
+importFrom(graphics,par)
 importFrom(htmltools,HTML)
 importFrom(htmltools,tagAppendAttributes)
 importFrom(htmltools,tagList)
@@ -21,7 +22,9 @@ importFrom(shiny,NS)
 importFrom(shiny,column)
 importFrom(shiny,shinyApp)
 importFrom(shiny,tagList)
+importFrom(stats,cor)
 importFrom(stats,mad)
 importFrom(stats,median)
+importFrom(stats,na.omit)
 importFrom(stats,sd)
 importFrom(utils,head)
