ENH: refactor plotly funs into fct_stats_plotly.R
** moved plotly plot funs from mod_cs_dist_plotly.R to fct_stats_plotly.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,15 @@
 
 export("%>%")
 export(add_shiny_module)
+export(boxplot_plotly)
+export(combochat_plotly)
+export(density_plotly)
+export(freqbar_plotly)
+export(gg_scale_compare)
+export(hist_plotly)
+export(qqplot_plotly)
 export(run_app)
+export(scatter_plotly)
 import(ggplot2)
 import(shiny)
 import(shinydashboard)
