--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,8 @@ Depends:
 Imports: 
     assertive,
     attempt,
+    cluster,
+    clustertend,
     config,
     correlationfunnel,
     corrplot,
@@ -23,7 +25,9 @@ Imports:
     DataExplorer,
     dplyr,
     DT,
+    factoextra,
     fBasics,
+    fpc,
     fs,
     GGally,
     ggplot2,
@@ -35,10 +39,12 @@ Imports:
     magrittr,
     mice,
     naniar,
+    NbClust,
     PerformanceAnalytics,
     pkgload,
     plotly,
     purrr,
+    pvclust,
     rlang,
     shiny,
     shinydashboard,
@@ -62,3 +68,4 @@ Language: en-US
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Config/testthat/edition: 3
