--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,6 +38,7 @@ Imports:
     htmltools,
     magrittr,
     mice,
+    missMDA,
     naniar,
     NbClust,
     PerformanceAnalytics,
@@ -53,6 +54,7 @@ Imports:
     tidyr,
     tsibble,
     usethis,
+    VIM,
     visdat,
     zstmodelr
 Suggests: 
@@ -63,9 +65,9 @@ Suggests:
     spelling,
     testthat,
     withr
+Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-Config/testthat/edition: 3
