ENH: add mod_cs_PCA_FactoMineR
** Add source and tests

** Update doc

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ Imports:
     attempt,
     cluster,
     clustertend,
+    colourpicker,
     config,
     correlationfunnel,
     corrplot,
@@ -49,6 +50,7 @@ Imports:
     rlang,
     shiny,
     shinydashboard,
+    shinyjs,
     skimr,
     tibble,
     tidyr,
