--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(boxplot_plotly)
 export(combochart_plotly)
 export(density_plotly)
 export(freqbar_plotly)
+export(get_pca_formula)
+export(get_pca_loading)
 export(gg_scale_compare)
 export(hist_plotly)
 export(qqplot_plotly)
