ENH: add mod_ts_analysis
** Add source and tests

** Update doc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export("%>%")
 export(add_shiny_module)
+export(aggregate_tsbl_vars)
 export(boxplot_plotly)
 export(combochart_plotly)
 export(density_plotly)
@@ -10,12 +11,16 @@ export(get_pca_formula)
 export(get_pca_loading)
 export(gg_scale_compare)
 export(hist_plotly)
+export(industry_mean)
+export(industry_median)
+export(periodize_index)
 export(qqplot_plotly)
 export(run_app)
 export(scatter_plotly)
 import(ggplot2)
 import(shiny)
 import(shinydashboard)
+import(tsibble)
 importFrom(config,get)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
