BUG: fix bugs in computing industry average
** fix bugs in computing industry average

** Add suggested packages in DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,8 +26,13 @@ Imports:
     DataExplorer,
     dplyr,
     DT,
+    fable,
+    fable.prophet,
+    fabletools,
     factoextra,
     fBasics,
+    feasts,
+    formattable,
     fpc,
     fs,
     GGally,
@@ -54,6 +59,7 @@ Imports:
     skimr,
     tibble,
     tidyr,
+    tsibble,
     tsibble,
     usethis,
     VIM,
