ENH: add save_debug_data() in utils-dev.R
* save_debug_data() to save data for debug

* Add documents and tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(aggregate_tsbl_vars)
 export(boxplot_plotly)
 export(combochart_plotly)
 export(density_plotly)
+export(disable_debug)
+export(enable_debug)
 export(freqbar_plotly)
 export(get_pca_formula)
 export(get_pca_loading)
@@ -13,9 +15,11 @@ export(gg_scale_compare)
 export(hist_plotly)
 export(industry_mean)
 export(industry_median)
+export(on_debug)
 export(periodize_index)
 export(qqplot_plotly)
 export(run_app)
+export(save_debug_data)
 export(scatter_plotly)
 import(ggplot2)
 import(shiny)
