ENH: add load_stock_return() and load_market_return() to fct_testdata
** load_stock_return(): load test data of stock return

** load_market_return(): load test data of market return

** Add documents and tests

[ticket: X]

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,12 +15,18 @@ export(gg_scale_compare)
 export(hist_plotly)
 export(industry_mean)
 export(industry_median)
+export(load_csbl_vars)
+export(load_factors_info)
+export(load_market_return)
+export(load_stock_return)
+export(load_tsbl_vars)
 export(on_debug)
 export(periodize_index)
 export(qqplot_plotly)
 export(run_app)
 export(save_debug_data)
 export(scatter_plotly)
+export(tsbl2csbl)
 import(ggplot2)
 import(shiny)
 import(shinydashboard)
