CLN: revise to clear notes/warnings from devtools::check()
** Revised codes to clear notes or warning founded by devtools::check()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,7 +27,6 @@ export(run_app)
 export(save_debug_data)
 export(scatter_plotly)
 export(tsbl2csbl)
-import(ggplot2)
 import(shiny)
 import(shinydashboard)
 import(tsibble)
@@ -43,6 +42,7 @@ importFrom(htmltools,tagAppendAttributes)
 importFrom(htmltools,tagList)
 importFrom(htmltools,tags)
 importFrom(magrittr,"%>%")
+importFrom(rlang,.data)
 importFrom(shiny,NS)
 importFrom(shiny,column)
 importFrom(shiny,shinyApp)
