--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -68,7 +68,7 @@ Imports:
     usethis,
     VIM,
     visdat,
-    zstmodelr
+    zstmodelr (>= 0.0.0.9000)
 Suggests: 
     covr,
     mockery,
@@ -83,3 +83,5 @@ Language: en-US
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Remotes:  
+    chriszheng2016/zstmodelr@develop
