TST: add utils_testthat_helpers and fix some bugs
** Add skip_if_stock_db_not_ready()

** Update tests related to stock db

** withr::local_tempdir("xxx_app") to avoid conflicts in testing app

** Fix bugs in fct_data_service.R and fct_testdata.R

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -77,6 +77,7 @@ Suggests:
     spelling,
     testthat,
     withr
+Config/testthat/parallel: false
 Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
