ENH: add mod_ts_feat_stl_tidyverts
** Add mod_ts_feat_stl_tidyverts

** Add Doc and tests

** Update mod_ts_analysis.R and tests

[ticket: X]

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(qqplot_plotly)
 export(run_app)
 export(save_debug_data)
 export(scatter_plotly)
+export(tidy_tsbl)
 export(tsbl2csbl)
 import(shiny)
 import(shinydashboard)
